Fix URI to URL conversion and correct syntax for array declaration
Replace direct URL instantiation with URI.create to ensure proper parsing, and fix the syntax of byte array declaration for consistency and clarity. These changes improve code reliability and maintain readability.

Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@pm.me>